--- a/templates/myhome.html
+++ b/templates/myhome.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     
     <title>Prabodh</title>
+    <script data-ad-client="ca-pub-2877679506960222" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <meta name="google-site-verification" content="HW_f8QsD-n8ZoqKv9R48KloJ1cn12CIm4F3CrnTC2Iw" />
   </head>
   <body>
