--- a/templates/quiz/admin_view_student.html
+++ b/templates/quiz/admin_view_student.html
@@ -40,18 +40,25 @@
           <th>Delete</th>
         </tr>
       </thead>
+      
       {% for t in students %}
       <tr>
-
+      
         <td> {{t.get_name}}</td>
-        <td> <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
+        
+        <td>
+         {% if object.profile_pic %}
+          <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" />
+         {% endif %}
+        </td>   
         <td>{{t.mobile}}</td>
         <td>{{t.address}}</td>
-        
+      
         <td><a class="btn btn-primary btn-xs" href="{% url 'update-student' t.id  %}"><span class="glyphicon glyphicon-edit"></span></a></td>
         <td><a class="btn btn-danger btn-xs" href="{% url 'delete-student' t.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
       </tr>
       {% endfor %}
+      
     </table>
   </div>
 </div>
