--- a/templates/quiz/admin_view_student_marks.html
+++ b/templates/quiz/admin_view_student_marks.html
@@ -39,16 +39,21 @@
           
         </tr>
       </thead>
+      
       {% for t in students %}
       <tr>
-
+      
         <td> {{t.get_name}}</td>
-        <td> <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
-        
+        <td>
+         {% if object.profile_pic %}
+          <img src="{% static t.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" />
+         {% endif %}
+        </td>    
         <td><a class="btn btn-primary btn-xs" href="{% url 'admin-view-marks' t.id  %}"><span class="glyphicon glyphicon-eye-open"></span></a></td>
-        
+      
       </tr>
       {% endfor %}
+      
     </table>
   </div>
 </div>
