--- a/templates/teacher/demov4.html
+++ b/templates/teacher/demov4.html
@@ -39,7 +39,7 @@
 <div class="container">
   <div class="panel panel-danger">
     <div class="panel-heading">
-      <h6 class="panel-title">9th class</h6>
+      <h6 class="panel-title">10th class</h6>
       <tr>
         <center>
           <th>Videos&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
@@ -56,10 +56,12 @@
       <tr>
 
         <td> {{t.ten}}</td>
+        <br>
+        <td><a href="{% url 'delete_task' t.id %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
+        <td><a  <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview4' t.id  %}"></i></a></td>
         
-        
-        <td><a <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview4' t.id  %}"></i></a></td>
       </tr>
+
       {% endfor %}
     </table>
   </div>
