--- a/templates/teacher/demoview4.html
+++ b/templates/teacher/demoview4.html
@@ -22,6 +22,20 @@
   </style>
 </head>
 <br><br>
+{% if messages %}
+  {% for msg in messages %}
+  <center>
+    <div class="alert alert-danger" role="alert">
+      {{msg}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+      <br>  
+      <a href="{% url "demov4" %}"><button type="button" class="btn btn-danger">PREVIOUS PAGE</button></a>  
+    </div>  
+  </center>  
+  {% endfor %}
+{% endif %} 
     
     {% for i in q4 %} 
 <center>
