--- a/templates/teacher/demov2.html
+++ b/templates/teacher/demov2.html
@@ -36,6 +36,20 @@
 
   </style>
 </head>
+{% if messages %}
+  {% for msg in messages %}
+  <center>
+    <div class="alert alert-danger" role="alert">
+      {{msg}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+      <br>  
+      <a href="{% url "demov2" %}"><button type="button" class="btn btn-danger">PREVIOUS PAGE</button></a>  
+    </div>  
+  </center>  
+  {% endfor %}
+{% endif %} 
 <div class="container">
   <div class="panel panel-danger">
     <div class="panel-heading">
@@ -57,7 +71,7 @@
 
         <td> {{t.eig}}</td>
         
-        
+        <td><a href="{% url 'delete_task8' t.id %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
         <td><a <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview2' t.id  %}"></i></a></td>
       </tr>
       {% endfor %}
