--- a/templates/teacher/demov4.html
+++ b/templates/teacher/demov4.html
@@ -36,6 +36,20 @@
 
   </style>
 </head>
+{% if messages %}
+  {% for msg in messages %}
+  <center>
+    <div class="alert alert-danger" role="alert">
+      {{msg}}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+        </button>
+      <br>  
+      <a href="{% url "demov4" %}"><button type="button" class="btn btn-danger">PREVIOUS PAGE</button></a>  
+    </div>  
+  </center>  
+  {% endfor %}
+{% endif %} 
 <div class="container">
   <div class="panel panel-danger">
     <div class="panel-heading">
@@ -56,9 +70,8 @@
       <tr>
 
         <td> {{t.ten}}</td>
-        <br>
-        <td><a href="{% url 'delete_task' t.id %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
-        <td><a  <i class="fa fa-eye" aria-hidden="true" href="{% url 'demoview4' t.id  %}"></i></a></td>
+        <td><a href="{% url 'delete_task4' t.id %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
+        <td><a  <iclass="fa fa-eye" aria-hidden="true" href="{% url 'demoview4' t.id  %}"></i></a></td>
         
       </tr>
 
