--- a/templates/teacher/demov4.html
+++ b/templates/teacher/demov4.html
@@ -70,7 +70,7 @@
       <tr>
 
         <td> {{t.ten}}</td>
-        <td><a href="{% url 'delete_task4' t.id %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
+        <td><a href="{% url 'delete_task' t.id %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
         <td><a  <iclass="fa fa-eye" aria-hidden="true" href="{% url 'demoview4' t.id  %}"></i></a></td>
         
       </tr>
