--- a/templates/student/demoview4s.html
+++ b/templates/student/demoview4s.html
@@ -23,10 +23,9 @@
 </head>
 <br><br>
     
-    {% for i in q4s %} 
+    {% for i in q4 %} 
 <center>
       <h1>{{i.ten}}</h1>
-    
     <br>
      <video width="480" controls>
       <source src="{{ i.tenn }}" type='video/mp4'/>  
