--- a/templates/quiz/admin_add_question.html
+++ b/templates/quiz/admin_add_question.html
@@ -28,6 +28,8 @@
       <label for="question">Question</label>
       {% render_field questionForm.question|attr:'required:true' class="form-control" placeholder="What is the currency of India ?" %}
         <br>
+      <label for="upload">Add Question Image</label>
+          {% render_field questionForm.upload|attr:'required:true' class="form-control" placeholder="" %}  
       <label for="question_number">Marks</label>
       {% render_field questionForm.marks|attr:'required:true' class="form-control" placeholder="10" %}
         <br>
