--- a/templates/student/start_exam.html
+++ b/templates/student/start_exam.html
@@ -18,6 +18,7 @@
     <h1 style="text-align: center;">{{course.course_name}}</h1>
     {% for q in questions%}
     <h3 class="text-info">{{ forloop.counter }}. {{q.question}}</h3><h4 style="text-align: right;">[Marks {{q.marks}}]</h4>
+     <img src="{{q.upload.url}}" alt="quiz_image" style="width:250px;">
       {% csrf_token %}
         <input type="hidden" name="csrfmiddlewaretoken" value="C24rUotmdHawVQJL3KrqiWxvti8UffOFYUc8TRbZtLt36AVLdP3jbkzUVe3beRAa">
         
