--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -6,22 +6,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <style media="screen">
-    .jumbotron {
-      margin-top: 0px;
-      margin-bottom: 0px;
-    }
+<style media="screen">
+.jumbotron {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
 
-    .jumbotron h1 {
-      text-align: center;
-    }
+.jumbotron h1 {
+  text-align: center;
+}
+.loader {
+  border-top: 16px  #9900ff;
+  border-right: 16px #ae4f2f;
+  border-bottom: 16px #ff4a50;
+  border-bottom: 16px #f2d832;
+  border-bottom: 16px #cbff00;
+}
+    
 
-  </style>
+</style>
 
 </head>
 
 <body>
-
+<div class="loader"></div>
   {% include "quiz/navbar.html" %}
   <br><br>
   <div class="jumbotron" style="margin-bottom:0px;">
